src/test/resources/Parser/SyntaxErrors/SignatureCollision.front
class A:
    void test (A a, B b) {}
    void test (A a, B b, A a) {}
    A test (A a, B b) {}

class B: